# AutoForge

./: .env.example  .gitignore  README.md  main.py  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: ci.yml
src/: checkpoint.py  crew.py  validate.py
tests/: test_autoforge.py
